fix : post overflow

--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -48,6 +48,7 @@ p {
 	display: flex;
 	flex-direction: column;
 	gap: 0.75rem;
+	overflow-wrap: anywhere;
 }
 
 .single.post {
